Creacion del primer modelo, migracion y actulizacion de la BD para contries

--- a/Sales/Sale.Api/appsettings.json
+++ b/Sales/Sale.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DockerConexion": "Data Source=.;initial Catalog=dbSales2023; User ID=sa;Password=Malcals1972.;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
